--- a/style.css
+++ b/style.css
@@ -22,7 +22,12 @@
     background-color: black;
     color: white;
     border-radius: 5px;
-    display: inline-block;
+    display: flex;
+    gap: 20px;
+}
+.btn-1{
+    width: 200px;
+    gap: 20px;
 }
 .heroimg{
     height: 450px;
